src/test/ui/reachable/expr_repeat.stderr
error: unreachable expression
  --> $DIR/expr_repeat.rs:9:25
   |
LL |     let x: [usize; 2] = [return; 2];
   |                         ^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_repeat.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

